Address some minor Error Prone warnings.